quick fix for mobile menu button overlap

--- a/web/components/ui/Content/Content.module.scss
+++ b/web/components/ui/Content/Content.module.scss
@@ -55,7 +55,7 @@
     position: absolute;
     top: 4px;
     right: 10px;
-    z-index: 200;
+    z-index: 199;
   }
 }
 
